# market-condition-simulator

./: README.md  pyproject.toml
samples/: btcusdt_book.jsonl  btcusdt_orders.jsonl
src/market_condition_simulator/: __init__.py  __main__.py  ingest.py  latency.py  models.py  pipeline.py  protocols.py  simulator.py  slippage.py
tests/: test_latency.py  test_pipeline.py  test_simulator.py  test_slippage.py
